# glraw

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  glraw-config.cmake  glraw.cpp  version.h.in
cmake/: Custom.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  PlatformLinuxGCC.cmake  PlatformMacOS.cmake  PlatformWindowsGCC.cmake  PlatformWindowsMSVC.cmake
data/: blur.frag  boxblur.frag  grayscale.frag
deploy/: CMakeLists.txt
deploy/files/: GLRawFile.cpp  glraw.rb.template
docs/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxy-boot.js  namespacedocumentation.h
docs/doxygen/: CMakeLists.txt  bootstrap.min.css  doxyfile.in
docs/doxygen/include/: mainpage.html
include/glraw/: AbstractConverter.h  AbstractFileWriter.h  AssetInformation.h  Canvas.h  CompressionConverter.h  ConvertManager.h  Converter.h  DummyClass.h  Enumerations.h  FileWriter.h  GLRawFile.h  GLRawFile.hpp  GLRawFileWriter.h  ImageEditorInterface.h  MirrorEditor.h  RawConverter.h  RawConverter.hpp  RawDataHandlerInterface.h  RawFile.h  RawFile.hpp  RawFileWriter.h  S3TCExtensions.h  ScaleEditor.h  WriterInterface.h  glraw.h
source/: CMakeLists.txt  glraw-version.h.in  main.cpp
source/glraw/: AbstractConverter.cpp  AbstractFileWriter.cpp  AssetInformation.cpp  CMakeLists.txt  Canvas.cpp  CompressionConverter.cpp  ConvertManager.cpp  Converter.cpp  DummyClass.cpp  FileWriter.cpp  GLRawFile.cpp  GLRawFileWriter.cpp  MirrorEditor.cpp  RawConverter.cpp  RawFile.cpp  RawFileWriter.cpp  ScaleEditor.cpp  UniformParser.cpp  main.cpp
source/glraw-cmd/: Application.cpp  Application.h  ArgumentsParser.cpp  ArgumentsParser.h  Builder.cpp  Builder.h  Builder.hpp  CMakeLists.txt  CommandLineOption.h  Conversions.cpp  Conversions.h  glraw-cmd-version.h.in  main.cpp
source/glraw-viewer/: Application.cpp  Application.h  CMakeLists.txt  Canvas.cpp  Canvas.h  DropFix.cpp  DropFix.h  Viewer.cpp  Viewer.h  Viewer.ui  main.cpp
source/glraw/include/glraw/: AbstractConverter.h  AbstractFilter.h  AbstractWriter.h  AssetInformation.h  Canvas.h  CompressionConverter.h  ConvertManager.h  Converter.h  FileNameSuffix.h  FileWriter.h  ImageEditorInterface.h  MemoryProcessor.h  MemoryWriter.h  MirrorEditor.h  RawFile.h  S3TCExtensions.h  ScaleEditor.h  glraw.h  glraw_api.h
source/glraw/include/glraw/filter/: AbstractFilter.h  AbstractKernel.h  BlockBlur.h  Brightness.h  ColorBlend.h  Contrast.h  Dilation.h  EdgeDetection.h  Erosion.h  Filter.h  Filter.hpp  GaussianBlur.h  Grayscale.h  Invert.h  Library.hpp  Lookup.hpp  Mirror.h  MotionBlur.h  RadialBlur.h  RemoveAlpha.h  Rotate.h  Saturation.h  Scale.h  Sharpening.h  Sobel.h  UnsharpMask.h
source/glraw/source/: AbstractConverter.cpp  AssetInformation.cpp  Canvas.cpp  CompressionConverter.cpp  ConvertManager.cpp  Converter.cpp  FileNameSuffix.cpp  FileWriter.cpp  MemoryProcessor.cpp  MemoryWriter.cpp  MirrorEditor.cpp  RawFile.cpp  ScaleEditor.cpp  UniformParser.h  glraw.cpp
source/glraw/source/filter/: AbstractFilter.cpp  AbstractKernel.cpp  BlockBlur.cpp  Brightness.cpp  ColorBlend.cpp  Contrast.cpp  Dilation.cpp  EdgeDetection.cpp  Erosion.cpp  Filter.cpp  GaussianBlur.cpp  Grayscale.cpp  Invert.cpp  Mirror.cpp  MotionBlur.cpp  RadialBlur.cpp  RemoveAlpha.cpp  Rotate.cpp  Saturation.cpp  Scale.cpp  Sharpening.cpp  Sobel.cpp  UnsharpMask.cpp
